--- a/package.json
+++ b/package.json
@@ -17,12 +17,19 @@
     "axios": "^0.21.1",
     "eslint-config-import": "^0.13.0",
     "next": "latest",
+    "next-redux-wrapper": "^7.0.4",
     "pino": "^6.11.3",
     "prettier": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.3",
     "styled-reset": "^4.3.4"
+  },
+  "engines": {
+    "node": "13.13.0"
   },
   "devDependencies": {
     "@types/node": "15.0.0",
@@ -30,7 +37,7 @@
     "@types/react": "17.0.4",
     "@types/react-dom": "17.0.3",
     "@types/styled-components": "5.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.25.0",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.27.0",
